fixed header components margins (gap issue)

--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -7,18 +7,20 @@
   flex-flow: row wrap;
   justify-content: center;
   align-items: center;
-  padding: 0.5rem;
-  gap: 1rem;
+}
+
+.wrap>* {
+  margin: 0.5rem;
 }
 
 .logo {
   display: flex;
   align-items: center;
-  gap: 0.5rem;
 }
 
 .icon {
   height: 2rem;
+  margin-right: 1rem;
 }
 
 .header {
@@ -85,9 +87,14 @@
   border-radius: 1rem;
 }
 
+@media screen and (max-width: 992px) {
+  .linkTab {
+    min-width: 80%;
+  }
+}
 
 @media screen and (max-width: 768px) {
   .linkTab {
-    width: 100%;
+    min-width: 100%;
   }
 }
